# reql

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  conf.yaml  launcher.py  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-assets.yml
docs/: ARCHITECTURE.md  ARTIFACT_INGESTION.md  CLI.md  CODE_ANALYSIS.md  CONFIGURATION.md  EXTENDING.md  GRAPH_ANALYSIS.md  INCREMENTAL_COMPILATION.md  MCP.md  REPORTING.md  REQL.md  SCHEMA.md  STORAGE.md
src/agents/: __init__.py  gen-skill.py  install.py
src/api/: __init__.py  memory_graph.py
src/mcp/: __init__.py  server.py  tools.py
src/memory/: __init__.py  cli.py  diagnostics.py  security.py
src/memory/agent/: __init__.py  workspace.py
src/memory/analysis/: __init__.py  bridge_detection.py  centrality.py  communities.py  hubs.py  specificity.py
src/memory/artifacts/: __init__.py  cache.py  compiler.py  context_scope.py  delta.py  fingerprint.py  ignore.py  mime.py  models.py  project.py  scanner.py
src/memory/code_analysis/: __init__.py  ast_profiles.py  base.py  call_graph.py  catalog.py  factory.py  graph_utils.py  import_graph.py  language_detection.py  languages.py  models.py  parser_base.py  symbol_table.py  tree_sitter_languages.py  tree_sitter_parser.py
src/memory/code_analysis/extraction/: __init__.py  base.py  factory.py
src/memory/code_analysis/languages/: apex.py  bash.py  c.py  csharp.py  elixir.py  fortran.py  go.py  (+17 more)
src/memory/config/: __init__.py  loader.py  models.py
src/memory/document_ingestion/: __init__.py  base.py  chunking.py  markdown.py  metadata.py  models.py  pdf.py  text.py
src/memory/domain/: __init__.py  constants.py  exceptions.py  ids.py  models.py  timeutils.py
src/memory/engines/: __init__.py  activation.py  salience.py
src/memory/extraction/: __init__.py  deterministic.py  document_processor.py  normalization.py  semantic.py  signature.py
src/memory/infrastructure/: __init__.py
src/memory/ports/: __init__.py  extractor.py
src/memory/query/: __init__.py  ast.py  errors.py  evaluator.py  lexer.py  result.py
src/memory/reporting/: __init__.py  cache_report.py  delta_report.py  graph_report.py  html_graph.py  project_report.py
src/memory/services/: __init__.py  incremental_compilation.py  project_watch.py  retrieval.py
src/memory/storage/: __init__.py  block_store.py  graph_store.py
src/reql/: __init__.py
src/reql/config/: __init__.py
src/reql/query/: __init__.py
tests/: test_agent_workspace.py  test_block_storage.py  test_cli.py  test_code_analysis_graph_utils.py  test_code_graph_compilation.py  test_document_ingestion_layers.py  test_end_to_end_flow.py  test_incremental_compilation.py  test_markdown_ingestion.py  test_memory_graph.py  test_security.py
(+30 files in other folders)
